--- a/index.html
+++ b/index.html
@@ -65,57 +65,57 @@
             <div class="container px-4 px-lg-5">
                 
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="IMG_0955-scaled.jpg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="8.png" alt="..."></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Bástyák</h4>
-                            <p class="text-black-50 mb-0">Csapat tagjai: Aggi János, Boros Pisti, Benkő Imre, Bátor Atilla, Kiss Ferenc. Hat ponttal nyertek veretlenül.</p>
+                            <p class="text-black-50 mb-0">Csapat tagjai: Aggi János, Boros Pisti, Benkő Imre, Bátor Atilla, Kiss Ferenc. Jelenkeztek:TF2,rainbow six siege,lol,war thunder.</p>
                         </div>
                     </div>
                 </div>
                    
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="kep2.jpg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="2.png" alt="..."></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Arany vessző</h4>
-                            <p class="text-black-50 mb-0">Csapat tagjai: Csaki Gergő, Berkel János, Kalcu József, Nana Mihály,Kiri Erik. Második helyen végeztek, egy ponttal kevesebbel mint a Bástyák </p>
+                            <h4>Sebes tigrisek</h4>
+                            <p class="text-black-50 mb-0">Csapat tagjai: Csaki Gergő, Berkel János, Kalcu József, Nana Mihály,Kiri Erik.Jelenkeztek:,Fortnight,lol,overwatchworh,war thunder.</p>
                         </div>
                     </div>
                 </div>
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="kep3.jpg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="1.png" alt="..."></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Poloskák</h4>
-                            <p class="text-black-50 mb-0">Csapat tagjai: Csonti Álmos, Pintér Jakab, Horvát Ádám, Drozdrik Ábel, Szegvári Bercel. Harmadikként zártak 2 ponttal kevesebbel mint a maximum és a harmadik helyért megküzdöttek a "Jöttem voltam mentem,, csapatal és nyertek.</p>
+                            <h4>Zeller fülüek</h4>
+                            <p class="text-black-50 mb-0">Csapat tagjai: Csonti Álmos, Pintér Jakab, Horvát Ádám, Drozdrik Ábel, Szegvári Bercel.Jelenkeztek:,Fortnight,lol,rainbow six siege. </p>
                         </div>
                     </div>
                 </div>
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="kep4.jpg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="4.png" alt="..."></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Jöttem voltam mentem</h4>
-                            <p class="text-black-50 mb-0">Csapat tagjai: Varga Mihály, Tóth István, Mészáros Elek, Juhász Iván, Fehér Ignác. Harmadik helyen végeztek 2 ponttal kevesebb mint a maximum és vesztettek a "Poloskák,, csapat ellen a harmadik helyért. Nem mindenki szerepel a képen.</p>
+                            <h4>ALL IN RED</h4>
+                            <p class="text-black-50 mb-0">Csapat tagjai: Varga Mihály, Tóth István, Mészáros Elek, Juhász Iván, Fehér Ignác. Jelenkeztek:TF2,Fortnight,lol,overwatchworh.</p>
                         </div>
                     </div>
                 </div>
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="kep5.jpg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="5.png" alt="..."></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Jóvanaz az úgy </h4>
-                            <p class="text-black-50 mb-0">Csapat tagjai: Gál József, Fekete Ignác, Simon Péter, Rácz Johan, Kis Jenő. Három ponttal kevesebb mint a maximum. Nem mindenki szerepel a képen.</p>
+                            <h4>no time to think </h4>
+                            <p class="text-black-50 mb-0">Csapat tagjai: Gál József, Fekete Ignác, Simon Péter, Rácz Johan, Kis Jenő. Jelenkeztek:TF2,Fortnight,lol,war thunder.</p>
                         </div>
                     </div>
                 </div>
-                <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="kep6.jpg" alt="..." /></div>
+                <div class="row gx-0 mb-4 mb-lg-5 align-items-center"></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="7.png" alt="..."></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Beugrok</h4>
-                            <p class="text-black-50 mb-0">Csapat tagjai: Pap János, Hegedűs Bercel, Hajdú György, Máté Gergő, Bakos Zoltán. Egy pontot értek el.</p>
+                            <h4>A Károlyok </h4>
+                            <p class="text-black-50 mb-0">Csapat tagjai: Gál József, Fekete Ignác, Simon Péter, Rácz Johan, Kis Jenő. Jelenkeztek:,Fortnight,lol,overwatchworh,rainbow six siege.</p>
                         </div>
                     </div>
                 </div>
@@ -308,3 +308,4 @@
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
+
