--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">Szabályzat</h2>
-                        <p class="text-white-50">
+                       <p class="text-white-50">
                             
 
-                            Minden csapat és játékos beleegyezik abba, hogy megfelelő és tiszteletteljes módon viselkedjen más csapatok és játékosok felé. Illetve a közvetítők, adminisztrátorok és nézők felé. Bármilyen fajta zaklatást azonnal jelezni kell a liga adminisztrátoroknak. A zaklatás magába foglalja, de nem korlátozódik a nemi identitásra és kifejezésre, az életkorra, a szexuális irányultságra, a fogyatékosságra, a fizikai megjelenésre, a testméretre, a fajra és a vallásra vonatkozó támadó állításokat vagy tevékenységeket. A zaklatás olyan dolgokat is jelent, mint a nyilvános helyeken megjelenő szexuális képek, szándékos megfélemlítés, követés, fotózás vagy felvétellel való zaklatása, nem helyénvaló fizikai érintkezés és nem kívánt szexuális figyelem. Ezek a korlátozások nem csak a csapatokra és a játékosokra vonatkoznak, hanem minden egyes, a liga egyik szakaszában részt vevő vagy jelenlévő személyre. Bárki, aki megszegi ezt a magatartási szabályzatot, büntethető, beleértve a kiutasítást és esetleg büntetőeljárásra jogosult! Gépet saját felelőséggel hozzal! Időpont 2022.01.22-én 10 órátol kezdődik ami League of Legends lesz.<br>Mindenki oklevelet és igazolást kap a napra.
+                            Minden csapat és játékos beleegyezik abba, hogy megfelelő és tiszteletteljes módon viselkedjen más csapatok és játékosok felé. Illetve a közvetítők, adminisztrátorok és nézők felé. Bármilyen fajta zaklatást azonnal jelezni kell a liga adminisztrátoroknak. A zaklatás magába foglalja, de nem korlátozódik a nemi identitásra és kifejezésre, az életkorra, a szexuális irányultságra, a fogyatékosságra, a fizikai megjelenésre, a testméretre, a fajra és a vallásra vonatkozó támadó állításokat vagy tevékenységeket. A zaklatás olyan dolgokat is jelent, mint a nyilvános helyeken megjelenő szexuális képek, szándékos megfélemlítés, követés, fotózás vagy felvétellel való zaklatása, nem helyénvaló fizikai érintkezés és nem kívánt szexuális figyelem. Ezek a korlátozások nem csak a csapatokra és a játékosokra vonatkoznak, hanem minden egyes, a liga egyik szakaszában részt vevő vagy jelenlévő személyre. Bárki, aki megszegi ezt a magatartási szabályzatot, büntethető, beleértve a kiutasítást és esetleg büntetőeljárásra jogosult! Gépet mindenkinek biztoszítunk! Időpontot a játékoknál látható. <br>Mindenki oklevelet és igazolást kap a napra.
                         </p>
                     </div>
                 </div>
@@ -313,6 +313,7 @@
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
+
 
 
 
