--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about">Szabályok</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#projects">Eddigi nyertesek és jelenlegi réstvevők</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#projects">jelenlegi réstvevőink</a></li>
                         <li class="nav-item"><a class="nav-link" href="#signup">Jelentkezési űrlap</a></li>
                     </ul>
                 </div>
@@ -313,6 +313,7 @@
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
+
 
 
 
